# esmhackathon

./: README.md  pyproject.toml
forge/data/: dnadataset.py  embed_tf.py  preprocess_embed.py  tf_promoter_dataset.py
